--- a/api/movie/pyproject.toml
+++ b/api/movie/pyproject.toml
@@ -9,6 +9,9 @@ dependencies = [
     "grpcio>=1.62.2",
     "grpcio-tools>=1.62.2",
     "grpcio-reflection>=1.62.2",
+    "pydantic>=2.7.1",
+    "pytest>=8.2.0",
+    "pytest-mock>=3.14.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.9"
