--- a/api/movie/pyproject.toml
+++ b/api/movie/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
     "pydantic>=2.7.1",
     "pytest>=8.2.0",
     "pytest-mock>=3.14.0",
+    "pydantic-settings>=2.2.1",
+    "sqlalchemy>=2.0.29",
+    "mysqlclient==2.1.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.9"
