--- a/api/rental_movie/pyproject.toml
+++ b/api/rental_movie/pyproject.toml
@@ -1,27 +1,30 @@
-[tool.poetry]
-name = "auth"
+[project]
+name = "rental-movie"
 version = "0.1.0"
-description = ""
-authors = ["ac2393921 <ac2393921@gmail.com>"]
+description = "Add your description here"
+authors = [
+    { name = "ac2393921", email = "ac2393921@gmail.com" }
+]
+dependencies = [
+    "fastapi>=0.110.2",
+    "uvicorn>=0.29.0",
+    "pymysql>=1.1.0",
+    "pytest>=8.1.1",
+    "pytest-mock>=3.14.0",
+]
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.9"
-black = "^23.9.1"
-flake8 = "^6.1.0"
-fastapi = "^0.103.1"
-uvicorn = "^0.23.2"
-pydantic = {extras = ["email"], version = "^2.4.2"}
-pymysql = "^1.1.0"
-bcrypt = "^4.0.1"
-pytest = "^7.4.3"
-pytest-cov = "^4.1.0"
-pytest-mock = "^3.12.0"
-redis = "^5.0.1"
-python-jose = "^3.3.0"
-fastapi-jwt-auth = "^0.5.0"
-
+requires-python = ">= 3.9"
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.rye]
+managed = true
+dev-dependencies = []
+
+[tool.hatch.metadata]
+allow-direct-references = true
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/rental_movie"]
